# ChangeLog for app-emacs/eselect-mode
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/eselect-mode/ChangeLog,v 1.4 2013/07/10 19:33:15 grobian Exp $

  10 Jul 2013; Fabian Groffen <grobian@gentoo.org> eselect-mode-1.3.6.ebuild:
  Marked ~x64-macos, bug #475964

  07 Jul 2013; Alexis Ballier <aballier@gentoo.org> eselect-mode-1.3.6.ebuild:
  keyword ~amd64-fbsd, bug #475964

  06 Jul 2013; Ulrich Müller <ulm@gentoo.org> eselect-mode-1.3.6.ebuild:
  Carry keywords over from app-emacs/gentoo-syntax, as eselect-mode was
  effectively split off from it, bug 475964.

*eselect-mode-1.3.6 (06 Jul 2013)

  06 Jul 2013; Ulrich Müller <ulm@gentoo.org> +eselect-mode-1.3.6.ebuild,
  +files/50eselect-mode-gentoo.el, +metadata.xml:
  Initial import, from Emacs overlay. Ebuild contributed by me.