@@ -3,13 +3,21 @@ Hash: SHA256
 
 AUX 50eselect-mode-gentoo.el 178 SHA256 00ee4866ea3264d981ec40e0b95ec0f7add48aa0bf853494278040d35aeccb33 SHA512 200da398adf72241112bcda74b432a8a313cf29018c9f6fbdf6021674b23a201ada6ba884d4c9c3a4ee4c042d6c8fc7c3ba59702c8ddb6ea20b652f9ded9d32f WHIRLPOOL be4cd812d86de4b0fc0f574cb2be0d6bf1421e1735e3f28fb1345c460bc8271c5f3224dfb2dc39e420705b335f2a74c684ea1fc827b3ce54a518f26155e1ed20
 DIST eselect-1.3.6.tar.xz 166976 SHA256 5a2d7c69ed6f668bee60a72f742a768fec4006b05255b0f79a4ebac86dbd0c2b SHA512 a1fb0f9216eb87365c19480b9a63b9d050630329e1e6697427408393b07a3e3c0165296dea48badfe97ab6a651fee7e3f312e640d7cb32626249de876d242d9c WHIRLPOOL 716db4e6d12088f77368f3115c1196b64b71b1d3931c728adc20ca4fb6cd719fc4da6e648df15531ff02d7200459577a606bac2e239286f8dc0f2c54eaa61d6b
-EBUILD eselect-mode-1.3.6.ebuild 662 SHA256 a4095d1a20da14bc96f087537358479aa3b9b6eabea5b9899fb71232e7e37b2e SHA512 8bcf708067c466ed707cdff32d5f53075dc53d1ac149a9766cb77b1f71778ed1b60419ea7b14c06e786ca817c5310016e19cb41cef28d74b872934e345a7465a WHIRLPOOL 1be6fbf9cac5fbc04dde5f5c3e498f1f4276e6da668d3bfb029c43b405ad23172e5c3ce75243d28a098220c71730821db11b4ef620e627f74b029c32384cec40
-MISC ChangeLog 861 SHA256 f5840b3062e2e8a348192b9bf1c35322686de1b913f68502f6cb9c263dc31caa SHA512 0e30976a866ef5c3d432571b284812823490b319c43504447f9c0718dc92868f4702a2b779c19bad6e6c15160c4d0e0e922d38657e71bb60b7946b59e968966f WHIRLPOOL 23da515a3cf76e5d0703a1b2ddcc0e474c8170b2d52becb968404a630e6275ce199efcb6e4bef5e84b2c2be0747d9ea51a2b02de9b78c41ba8b2075871368473
+EBUILD eselect-mode-1.3.6.ebuild 664 SHA256 2d1c81613a0c86952e88dfbad558d86b997fca2f5f173037298856ba7b06fc33 SHA512 3e2ee61ffe496442450b3aec85d6a10507ff6999a50e64e425737356f22dc9717052031d39d8c4a04e7e763a2a707d08f8948487a00eb06adcfaf0e97f02583d WHIRLPOOL 2b1ad2ac540be5633648ea2f722ce6a84d6321701e07516c578549c41205408fdf698be599e8265133bc91b12106d58c03a5f2104ab7cb99a6b833ed3027f6bc
+EBUILD eselect-mode-9999.ebuild 572 SHA256 eb17f4cfef9ec7fec69640532323d5ce07bb35cbdc6bd3c0b8a8111f7316372e SHA512 9fc4a793b8753af455c913a3f538fd7e24a022d2c16ea79c41c97cb88981aa4512d1b00679c3d208978bd29c4524aad6de7461e25dc4e273e9bd317a276edb12 WHIRLPOOL b991d1cc0a52e131ff3a929bb1f2e2a6c9f967b0c5c5e888f10847d745e7eb346321781dc49049841b84590605aa3a286543d9216e2a63498634f96e8d18f0b2
+MISC ChangeLog 1031 SHA256 067818a47459ed9e30277db0df9a0c8630d8d53dc5e4e1b8f82e630425311c73 SHA512 8827b76d68707011062c5318da61afcc19cc15be9ea6584cd6ccdb2920e453718b2df1f87baf03eac6eb6916d576df4c57ecff0baaa91b1533eb174f99810c56 WHIRLPOOL 06e5a6daa907405a46ba60e0f38e55cece8e5bf7ec862cac0cb4a6afb4ddc9cc9d01a6823bd36e51692289791c40651d3247babcb30364a9c4d66d534f70c9c4
 MISC metadata.xml 221 SHA256 9e2fd34faa48f992b68f4a92e068aade1e2bd57f8b5ca36a9e8f726b09dfe8c6 SHA512 075b87a19888c6d785cdc6dae5fcdca806f88878531a2ed373e6f0783b29fde680128974794f699e581c8fed0fab3279c0745cac7ff4f0619f3d63ec4c222af7 WHIRLPOOL 6220e00ab33cac804a019730e880457206c28464b5011499aee1ebc772fb6b5c7f5c6313c6cf92307dc4d5fcde8f75dfa1be7c346f9d2b853b7edfb7f20a1195
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (Darwin)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHdtvwACgkQX3X2B8XHToma/wCfVjmNHUHBBuGtxIiTKXKMz5xK
-3KsAn32jy3vpbgwwkTX0FuLQDqOr3XCc
-=AjIw
+iQGcBAEBCAAGBQJR4obLAAoJEJQzkH1pP7W4JNoL/iemCAtMtHpcCAtbuD/0PtwU
+B7ODVdP0MJBK4GW0qzxVh8omR/cI4KGDOxlwkQ2/GQ9Nf5DiWS6mRxnwy+B32Yb0
+pd/aOCtOMyJcO/7+KhFeO/QSeeE30ImERpNIOM6D8+mnGP+g6SX6ugjvQX3GrjWD
+KZ1LauevdUHBl6d67RFOWWtHWj/m8sIq+gWQ4F+V49VyjLUea13QeHgttY7B8kii
+dS88afB6F7KsHckpIUiPu4sk9eMEmvrhVU6R+KUALHxOwwgmED7PcncwXqrLH/Y7
+wSrM4jPGOrIQI06SbphlIeipul/bTS784+aMFPdnDzywEL53ZCNSLConlwRD97im
+PXKKrhhQRJLkn2/9spDdG3f7rZvoV57wr4XXSKt2wTXuF9taATBkKtYwP+CvJF1I
+nQbZ33B8HmAcPa4e4nUfC/2gmo5EKHFRL4HP9UASG4nald0gQgKN86Y8w1SnVgES
+WQU2jcbdiM7jwV7EWO2l7uhxq659HK17WZNXpe3f8A==
+=d80f
 -----END PGP SIGNATURE-----
