@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/eselect-mode/eselect-mode-1.3.6.ebuild,v 1.4 2013/07/10 19:33:15 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/eselect-mode/eselect-mode-1.3.6.ebuild,v 1.5 2013/07/14 11:07:54 ulm Exp $
 
 EAPI=5
 
@@ -8,7 +8,7 @@ inherit elisp
 
 MY_P="eselect-${PV}"
 DESCRIPTION="Emacs major mode for editing eselect files"
-HOMEPAGE="http://www.gentoo.org/proj/en/eselect/"
+HOMEPAGE="https://wiki.gentoo.org/wiki/Project:Eselect"
 SRC_URI="mirror://gentoo/${MY_P}.tar.xz"
 
 LICENSE="GPL-2+"
