@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/eselect-mode
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/eselect-mode/ChangeLog,v 1.4 2013/07/10 19:33:15 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/eselect-mode/ChangeLog,v 1.5 2013/07/14 11:07:54 ulm Exp $
+
+*eselect-mode-9999 (14 Jul 2013)
+
+  14 Jul 2013; Ulrich Müller <ulm@gentoo.org> eselect-mode-1.3.6.ebuild,
+  +eselect-mode-9999.ebuild:
+  Add live ebuild. Update HOMEPAGE.
 
   10 Jul 2013; Fabian Groffen <grobian@gentoo.org> eselect-mode-1.3.6.ebuild:
   Marked ~x64-macos, bug #475964
